# 142-final-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
fixtures/: prompt.md
fixtures/142-lab1/: annotations.csv  instructions.md  student_01.py  student_02.py  student_03.py  student_04.py  student_05.py  student_06.py  student_07.py  student_08.py  student_09.py  student_10.py  student_11.py  student_12.py  student_13.py  student_14.py  student_15.py  student_16.py  student_17.py  student_18.py  student_19.py  student_20.py  student_21.py  student_22.py  student_23.py  student_24.py
fixtures/142-lab2/: annotations.csv  instructions.md  student_01.py  student_02.py  student_03.py  student_04.py  student_05.py  student_06.py  student_07.py  student_08.py  student_09.py  student_10.py  student_11.py  student_12.py  student_13.py  student_14.py  student_15.py  student_16.py  student_17.py  student_18.py  student_19.py  student_20.py  student_21.py  student_22.py  student_23.py  student_24.py
fixtures/generic/: student_a.py  student_b.py  student_c.py
notebooks/: README.md  astra-paper.ipynb  exploration.ipynb  report.ipynb
