[project]
name = "astra"
version = "0.1.0"
description = "Code plagiarism detector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
