[project]
name = "astra"
version = "0.1.0"
description = "Code plagiarism detector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
